# rust_messenger_server

./: .env.example  Cargo.toml
migrations/: 20251221014859_create_users_table.sql  20251221022630_rename_display_name_to_first_name.sql  20251221023519_rename_surname_to_last_name.sql  20251221033041_add_encryption_pubkey.sql  20251221063147_create_pending_messages.sql  20251221074913_add_sender_enc_pubkey_to_pending.sql
src/: main.rs
src/db/: mod.rs  models.rs  pending.rs
src/handlers/: mod.rs  packet_handler.rs
src/hnet/: server.rs
src/logging/: logger.rs
src/services/: auth.rs  message.rs  mod.rs  user.rs
src/session/: manager.rs  mod.rs  session.rs
